fixed mobile menu-item spacing

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -121,13 +121,14 @@
   .nav-menu {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
     height: 90vh;
     position: absolute;
-    top: 80px;
     left: -100%;
     opacity: 1;
     transition: all 0.5s ease;
+    top: 65px;
   }
 
   .nav-menu.active {
@@ -135,7 +136,7 @@
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     z-index: 999;
   }
 
